[package]
name = "image-segmentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
opencv = "0.85.1"
png = "0.17.10"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.3.0", features = ["base64"] }
